app/main/default/objects/sf_tfs__Flosum_To_TFS__c/sf_tfs__Flosum_To_TFS__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Keys__c</fullName>
        <label>Keys</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Organization__c</fullName>
        <label>Organization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__key__c</fullName>
        <label>key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Flosum To TFS</label>
    <nameField>
        <label>SF Object Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flosum To TFS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>