app/main/default/objects/sf_tfs__Flosum_To_TFS__c/fields/sf_tfs__key__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__key__c</fullName>
        <label>key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>