app/main/default/objects/sf_tfs__Flosum_To_TFS__c/fields/sf_tfs__Keys__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Keys__c</fullName>
        <label>Keys</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>