app/main/default/objects/sf_tfs__Flosum_To_TFS__c/fields/sf_tfs__Organization__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Organization__c</fullName>
        <label>Organization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>